--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,62 +69,62 @@
 
   <!-- NAVBAR
       ================================================== -->
-  <div class="nav-wrapper">
-      <div class="container">
+  <div class="navbar-wrapper">
+    <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
+    <div class="container">
+
+      <div class="navbar navbar-inverse">
+        <div class="navbar-inner">
 
           <%= link_to image_tag("logo.png"), root_path, :class => "logo" %>
 
-        <div class="nav pull-right">
-
-          <div class="btn-group" id="customer-solutions-list">
-            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-              Customer Solutions
-              <div class="caret"></div>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to 'Overview', '/overview' %></li>
-              <li><%= link_to 'What We Do', '/what-we-do' %></li>
-              <li><%= link_to 'How It Works', '/how-it-works' %></li>
-              <li><%= link_to 'Highlights', '/what-we-do/highlights' %></li>
-              <li><%= link_to 'Spokes', '/partners' %></li>
-              <li><%= link_to 'Contact Us', '/contact' %></li>
-            </ul>
-          </div>
-
-          <div class="btn-group" id="community-list">
-            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-              Community
-              <div class="caret"></div>
-            </a>
-            <ul class="dropdown-menu">
-              <% if !current_user.nil? %>
-                  <li><%= link_to 'Dashboard', main_app.dashboard_path %></li>
-                  <li><%= link_to 'My Account', main_app.account_path %></li>
+          <!-- Responsive Navbar Part 1: Button for triggering responsive navbar (not covered in tutorial). Include responsive CSS to utilize. -->
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Customer Solutions<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to 'Overview', '/overview' %></li>
+                  <li><%= link_to 'What We Do', '/what-we-do' %></li>
+                  <li><%= link_to 'How It Works', '/how-it-works' %></li>
+                  <li><%= link_to 'Highlights', '/what-we-do/highlights' %></li>
+                  <li><%= link_to 'Spokes', '/partners' %></li>
+                  <li><%= link_to 'Contact Us', '/contact' %></li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Community<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <% if !current_user.nil? %>
+                      <li><%= link_to 'Dashboard', main_app.dashboard_path %></li>
+                      <li><%= link_to 'My Account', main_app.account_path %></li>
+                  <% end %>
+                  <li><%= link_to 'How It Works', '/how-it-works-members' %></li>
+                  <li><%= link_to 'Challenges', main_app.challenges_path %></li>
+                  <li><%= link_to 'Leaderboard', main_app.leaderboard_path %></li>
+                  <li><%= link_to 'Forums', '/forums' %></li>
+                </ul>
+              </li>
+              <li><a href="http://blog.cloudspokes.com">Blog</a></li>
+              <% if current_user.nil? %>
+                  <li><a href="#" data-toggle="modal" data-target="#register-modal">Register</a></li>
+                  <li><a href="#" data-toggle="modal" data-target="#login-modal">Login</a></li>
+              <% else %>
+                  <li><a class="btn-logout" href="<%= main_app.destroy_user_session_path %>">Logout</a></li>
               <% end %>
-              <li><%= link_to 'How It Works', '/how-it-works-members' %></li>
-              <li><%= link_to 'Challenges', main_app.challenges_path %></li>
-              <li><%= link_to 'Leaderboard', main_app.leaderboard_path %></li>
-              <li><%= link_to 'Forums', '/forums' %></li>
             </ul>
-          </div>
+          </div><!--/.nav-collapse -->
+        </div><!-- /.navbar-inner -->
+      </div><!-- /.navbar -->
 
-          <a class="btn" href="http://blog.cloudspokes.com"><span>Blog</span></a>
-          <% if current_user.nil? %>
-              <a href="#register-modal" data-toggle="modal" class="btn"><span>Register</span></a>
-              <a href="#login-modal" data-toggle="modal" class="btn"><span>Login</span></a>
-          <% else %>
-              <a class="btn btn-logout" href="<%= main_app.destroy_user_session_path %>"><span>Logout</span></a>
-          <% end %>
-        </div>
-
-        <% if @community_tick ||  @challenges_tick || @leaderboard_tick %>
-          <form class="form-search pull-right">
-              <input type="text" class="search-query typeahead" placeholder="Members / Challenges"/>
-              <a href="#" class="btn-search"></a>
-          </form>
-        <% end %>
-      </div> <!-- /.container -->
-  </div><!-- /.nav-wrapper -->
+    </div> <!-- /.container -->
+  </div>
 
   <%= yield %>
 
