added support for tooltips for the challenge admin ui

--- a/app/views/admin/challenges/index.html.erb
+++ b/app/views/admin/challenges/index.html.erb
@@ -9,7 +9,9 @@ function openInSalesforce(id) {
 
 <script type="text/javascript" charset="utf-8" language="javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.js"></script>
 <%= stylesheet_link_tag "DT_bootstrap" %>
+<%= stylesheet_link_tag "tooltipster" %>
 <%= javascript_include_tag "DT_bootstrap" %>
+<%= javascript_include_tag "jquery.tooltipster.min" %>
 
 <script type="text/javascript">
 function watchChange() {
@@ -79,8 +81,8 @@ window.onload = function() {
       </thead>
       <tbody>
         <% @challenges.each do |challenge| %>
-        <tr class="odd gradeX">
-          <td><%= link_to challenge.name, edit_admin_challenge_path(challenge.challenge_id) %> <%= link_to image_tag('open.png'), challenge_path(challenge.challenge_id), :target => '_blank' %></td>
+        <tr>
+          <td class="tooltip" title="Registered Members: <%= challenge.registered_members.to_i %><br/>Submissions: <%= challenge.registered_submissions.to_i %><br/>Days till close: <%= challenge.days_till_close.to_i %><br/>End Date: <%= format_challenge_end_date(DateTime.parse(challenge.end_date).getutc) %><br/>Views: <%= challenge.page_views.to_i %>"><%= link_to challenge.name, edit_admin_challenge_path(challenge.challenge_id) %> <%= link_to image_tag('open.png'), challenge_path(challenge.challenge_id), :target => '_blank', :class => '' %> <%= image_tag('lock2.png') if challenge.private_challenge == 'TRUE'  %></td>
           <td><div onclick="openInSalesforce('<%= challenge.id %>')"><%= challenge.challenge_id %></div></td>
           <td><%= challenge.status %></td>
           <td><%= challenge.challenge_type %></td>
