layout tweaks from qa

--- a/app/views/shared/_account_menu.html.erb
+++ b/app/views/shared/_account_menu.html.erb
@@ -1,13 +1,13 @@
-<div class="span4 sidebar">
-    <h2>MY ACCOUNT SETTINGS</h2>
+<div class="span3 sidebar">
+    <h2>SETTINGS</h2>
     <%= build_menu('settings',selected_item) %>
 
     <h2>MY STUFF</h2>
     <%= build_menu('my_stuff',selected_item) %>
 
-    <h2>MY REFERRAL PROGRAM</h2>
+    <h2>REFERRALS</h2>
     <%= build_menu('referral',selected_item) %>
 
-    <h2>MY SUBMISSIONS</h2>
+    <h2>JUDGING</h2>
     <%= build_menu('submissions',selected_item) %>
 </div>
