--- a/app/views/members/past_challenges.html.erb
+++ b/app/views/members/past_challenges.html.erb
@@ -5,7 +5,7 @@
 <div class="content-wrapper">
     <div class="container">
 
-        <div class="title"><h1>PAST CHALLENGES</h1></div>
+        <div class="title"><h1>PAST CHALLENGES FOR <%= params[:id].upcase %></h1></div>
 
         <% if @past_challenges.empty? %><center>No past challenge found.</center><% end %>
 
