added download all assets for a challenges

--- a/app/views/judging/scorecard.html.erb
+++ b/app/views/judging/scorecard.html.erb
@@ -30,6 +30,8 @@
 
         <div class="title"><h1>SUBMITTED ASSETS</h1></div>
 
+        <p><b>New!</b> <%= link_to 'Download all assets', download_all_assets_path(@participant.id) %> (code, videos, files, etc.) for all participants as a single ZIP file.</p>
+
         <table class="table table-hover table-bordered">
         <thead>
         <tr>
