added pingdom code

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,19 @@
       })();
     </script>
     <!-- end Google analytics -->    
+    <!-- start pingdom -->
+    <script>
+    var _prum = [['id', '51f8def6abe53d4455000000'],
+                 ['mark', 'firstbyte', (new Date()).getTime()]];
+    (function() {
+        var s = document.getElementsByTagName('script')[0]
+          , p = document.createElement('script');
+        p.async = 'async';
+        p.src = '//rum-static.pingdom.net/prum.min.js';
+        s.parentNode.insertBefore(p, s);
+    })();
+    </script>
+    <!-- end pingdom -->
 
 </head>
 <body>
