replaced forums link with status

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -173,7 +173,7 @@
                       <li><%= link_to 'Blog', 'http://blog.cloudspokes.com' %></li>
                       <li><%= link_to 'FAQ', '/faq' %></li>
                       <li><%= link_to 'Help', '/help' %></li>
-                      <li><%= link_to 'Forums', '/forums' %></li>
+                      <li><%= link_to 'Status', 'http://status.cloudspokes.com', :target => '_blank' %></li>
                   </ul>
               </div>
 
