--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
         <% if !current_user.nil? %>
           <div class="logined">
               <div class="pull-left">
-                <span class="online-status"><%= @platform_stats['competing_today'].to_i %> CS Members Working Now</span>
+                <span class="online-status"><%= @platform_stats['competing_today'].to_i %> Members Working Now</span>
               </div>
 
               <div class="pull-right">
