--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -131,7 +131,7 @@
                 <div class="range-pane">
                   <div class="controls-row">
                     <input type="text" name="advanced[min_money]" id="input-min-money" value="<%= @min_money %>">
-                    <label class="control-label" for="input-min-money">Minimum</label>
+                    <label class="control-label" for="input-min-money" style="padding-right:4px">Minimum</label>
                   </div>
                   <div class="controls-row">
                     <input type="text" name="advanced[max_money]" id="input-max-money" value="<%= @max_money %>">
@@ -145,7 +145,7 @@
                 <div class="range-pane">
                   <div class="controls-row">
                     <input type="text" name="advanced[min_participants]" id="input-min-participants" value="<%= @min_participants %>">
-                    <label class="control-label" for="input-min-participants">Minimum</label>
+                    <label class="control-label" for="input-min-participants" style="padding-right:4px">Minimum</label>
                   </div>
                   <div class="controls-row">
                     <input type="text" name="advanced[max_participants]" id="input-max-participants" value="<%= @max_participants %>">
