bug fix - Register and Watch buttons are jammed together
- added challenge-side class to the right sidebar wrapper div.
- set the font size of btn  14px
- for right_participation.html.erb file, removed wrong p tag on top and changed p tag to div tag since p tag is not allowed to include block elements.(not necessary for the this bug fix)

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -737,4 +737,8 @@ ul.brief-info {
     color: white;
 }
 
+.challenge-side .btn {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
 /* ends screen.css */
