--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -63,7 +63,7 @@
         <% end %>
       </div>
 
-      <div class="span4">
+      <div class="span4 challenge-side">
         <br/><br/><br/>
         <!-- include the entire right side -->
         <%= render partial: "right_side", locals: {challenge: @challenge} %>
