--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -741,4 +741,8 @@ ul.brief-info {
   font-size: 14px;
   margin-bottom: 5px;
 }
+
+.challenge-list .challenge p.description {
+  height: 80px;
+}
 /* ends screen.css */
